<?xml version="1.0"?>
<package format="2">
  <name>livox_description</name>
  <version>0.0.0</version>
  <description>The livox_description package</description>

  <maintainer email="ramon.viedma@hp.com">Ramon Viedma</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/livox_description</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export />
</package>
