<?xml version="1.0"?>
<package format="2">
  <name>pcl_filter</name>
  <version>1.0.0</version>
  <description>The pcl_filter package allows to filter a pointcloud by distance</description>

  <maintainer email="ramon.viedma@hp.com">Ramon Viedma</maintainer>
  <license>TODO</license>
  <author email="ramon.viedma@hp.com">Ramon Viedma</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!--exec_depend>libpcl-all</exec_depend-->
  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-filters</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <exec_depend>libpcl-segmentation</exec_depend>

  <export />
  
</package>
